# astra-sim-service

./: .gitignore  .pylintrc  Dockerfile.devenv  LICENSE  Makefile  README.md  bare_metal_setup.sh  clos_fabric.yaml  index.html  make_version.sh  requirements.txt
client-scripts/: Makefile  README.md  pyproject.toml
client-scripts/mock_configurations/: logical.json  nc-topology-file.txt  network.yaml  network_config.txt  trace.txt
client-scripts/notebooks/: analytical_congestion_aware_sample.ipynb  analytical_congestion_aware_sample.py  analytical_congestion_unaware_sample.ipynb  analytical_congestion_unaware_sample.py  config_to_schema_sample.ipynb  config_to_schema_sample.py  htsim_sample.ipynb  htsim_sample.py  load_existing_et_example.ipynb  load_existing_et_example.py  ns3_sample.ipynb  ns3_sample.py
client-scripts/notebooks/infragraph/: analytical_dgx_device.ipynb  analytical_dgx_device.py  analytical_ironwood_rack.ipynb  analytical_ironwood_rack.py  clos_fabric_2tier.ipynb  clos_fabric_3tier.ipynb  htsim_clos_fabric_2tier.ipynb  htsim_clos_fabric_2tier.py  htsim_clos_fabric_3tier.ipynb  htsim_clos_fabric_3tier.py  ns3_clos_fabric_2tier.ipynb  ns3_clos_fabric_2tier.py  ns3_clos_fabric_3tier.ipynb  ns3_clos_fabric_3tier.py  ns3_infragraph_sample_dgx_device.ipynb  ns3_infragraph_sample_generic_devices.ipynb  ns3_single_dgx_device.ipynb  ns3_single_dgx_device.py  (+7 more)
client-scripts/resources/: communicator_group.json  logging_config.toml
client-scripts/service_client_utils/: astra_sim.py  astra_sim_client.py  common.py  pyproject.toml
client-scripts/tests/: conftest.py
client-scripts/utils/: astra_sim.py  astra_sim_client.py  common.py  config_to_schema.py
service/: .ASTRA_SIM_GIT_COMMIT_SHA  Dockerfile  Makefile  README.md  assign_version.py  convert_nb_to_script.py  headroom_size.patch  pyproject.toml
service/astra_server/: __main__.py  configuration_handler.py  errors.py  server_handler.py  simulation_handler.py  utils.py
service/build_script/: build_backend.sh
service/tests/: conftest.py
(+79 files in other folders)
