[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service_client_utils"
version = "0.1.0"
dependencies = [
    "networkx",
    "pandas",
    "grpcio",
]

[tool.setuptools]
packages = ["service_client_utils",]

[tool.setuptools.package-dir]
service_client_utils = "service_client_utils"